Saving activity points locally

--- a/config.json
+++ b/config.json
@@ -9,5 +9,5 @@
     "randomFactsAPI" : "https://useless-facts.sameerkumar.website/api",
     "giphyKey" : "fN7aTAliTPL6hQvGjCm35zxTVIV21knw",
     "giphyRandomAPI" : "https://api.giphy.com/v1/gifs/random",
-    "nekoAPI" : "https://nekos.life/api/v2"
+    "memberPointsFilePath" : "./data/MembersPoints.txt"
 }
