--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "prefix" : "*",
-    "botToken" : "Nzg3Njc0MzI0MDE3NjEwNzky.X9YY4Q.TO-v3ke1Ph6Z-4TLl6IXr2DfH38",
+    "botToken" : "token_here",
     "justId" : "570533833242443796",
     "reportsChannel" : "787721749365129256",
     "staffReportsChannel" : "787722722028552192",
